adapted for rad

--- a/src/global.css
+++ b/src/global.css
@@ -27,3 +27,7 @@ button[role="button"] {
 .space-between {
   justify-content: space-between;
 }
+
+.justify-center {
+  justify-content: center;
+}
